[gd_scene load_steps=7 format=2]

[ext_resource path="res://Stars.tscn" type="PackedScene" id=1]
[ext_resource path="res://font/TextFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Main Menu.gd" type="Script" id=3]
[ext_resource path="res://Options.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://font/Quicksand-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 100
use_filter = true
font_data = SubResource( 1 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 2.0
anchor_bottom = 1.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stars" parent="." instance=ExtResource( 1 )]

[node name="TitleContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="TitleContainer"]
margin_top = 135.0
margin_right = 1280.0
margin_bottom = 285.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/font = SubResource( 2 )
text = "ASTEROIDS"
align = 1

[node name="MenuContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 500.0
margin_top = 300.0
margin_right = -500.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
margin_right = 280.0
margin_bottom = 320.0

[node name="NewGame" type="Button" parent="MenuContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 104.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "New Game"
flat = true

[node name="Options" type="Button" parent="MenuContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 280.0
margin_bottom = 212.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Options"
flat = true

[node name="Quit" type="Button" parent="MenuContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 280.0
margin_bottom = 320.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Quit"
flat = true

[node name="OptionsContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 2.0
anchor_bottom = 1.0
margin_left = 400.0
margin_top = 150.0
margin_right = -400.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="OptionsContainer" instance=ExtResource( 4 )]
margin_right = 480.0
[connection signal="pressed" from="MenuContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
